--- a/examples/helloworld.yaml
+++ b/examples/helloworld.yaml
@@ -5,8 +5,9 @@ start_at: step_1
 tasks:
   step_1:
     type: remote_uri_call
-    uri: http://github.com/kieranbroadfoot
-    operation: GET
+    options:
+        uri: http://github.com/kieranbroadfoot
+        operation: GET
     on_success: step_2
   step_2:
     type: end
