Initial commit for experimental ssh support

--- a/examples/remote_ssh.yaml
+++ b/examples/remote_ssh.yaml
@@ -4,7 +4,7 @@ execute: "rate(10 hours)"
 start_at: step_1
 tasks:
   step_1:
-    type: remote_ssh
+    type: remote_ssh_call
     options:
         user: kieran
         host: brujah.local.
